tests/snapshots/cli__changelog_custom_unreleased_title.snap
---
source: tests/cli.rs
expression: sanitized
---
stdout:
# Changelog

## Upcoming (<DATE>)

### Features

* initial conventional commit (<OID>)
---
stderr:
