tests/snapshots/cli__changelog_explicit_branch_revision_is_used_as_section_title.snap
---
source: tests/cli.rs
expression: sanitized
---
stdout:
# Changelog

## release-next (<DATE>)

### Fixes

* branch patch (<OID>)

## v1.0.0 (<DATE>)

### Features

* base (<OID>)
---
stderr:
