tests/snapshots/cli__changelog_explicit_sha_range_uses_upper_sha_as_section_title.snap
---
source: tests/cli.rs
expression: sanitized
---
stdout:
# Changelog

## [<OID>](https://github.com/acme/demo/compare/<OID>...<OID>) (<DATE>)

### Fixes

* second
([<OID>](https://github.com/acme/demo/commit/<OID>))
---
stderr:
