tests/snapshots/cli__changelog_line_length_limits_wrapping.snap
---
source: tests/cli.rs
expression: sanitized
---
stdout:
# Changelog

## Unreleased (<DATE>)

### Features

* subject with
multiple words to
test configurable
line length
wrapping behavior
(<OID>)
---
stderr:
