tests/snapshots/cli__changelog_links_references_with_remote_derived_repository_metadata.snap
---
source: tests/cli.rs
expression: sanitized
---
stdout:
# Changelog

## Unreleased (<DATE>)

### Features

* base closes #123
([<OID>](https://github.com/acme/demo/commit/<OID>)),
closes [#123](https://github.com/acme/demo/issues/123)
---
stderr:
