tests/snapshots/cli__changelog_max_versions_one_with_unreleased.snap
---
source: tests/cli.rs
assertion_line: 165
expression: sanitized
---
stdout:
# Changelog

## Unreleased (<DATE>)

### Features

* unreleased feature (<OID>)
---
stderr:
