tests/snapshots/cli__changelog_max_versions_one_without_unreleased.snap
---
source: tests/cli.rs
assertion_line: 165
expression: sanitized
---
stdout:
# Changelog

## v4.0.0 (<DATE>)

### Features

* unreleased feature (<OID>)
---
stderr:
