tests/snapshots/cli__changelog_merges_includes_merge_commits.snap
---
source: tests/cli.rs
expression: sanitized
---
stdout:
# Changelog

## Unreleased (<DATE>)

### Features

* merge feature (<OID>)
* main work (<OID>)
* branch change (<OID>)
* base (<OID>)
---
stderr:
