tests/snapshots/cli__changelog_merges_with_first_parent_skips_branch_commits.snap
---
source: tests/cli.rs
expression: sanitized
---
stdout:
# Changelog

## Unreleased (<DATE>)

### Features

* merge feature (<OID>)
* main work (<OID>)
* base (<OID>)
---
stderr:
