tests/snapshots/cli__changelog_no_wrap_retains_long_lines.snap
---
source: tests/cli.rs
expression: sanitized
---
stdout:
# Changelog

## Unreleased (<DATE>)

### Features

* a very long subject that should exceed the default wrapping limit to verify behavior (<OID>)
---
stderr:
