tests/snapshots/cli__changelog_paths_filter_merge_commits_against_first_parent.snap
---
source: tests/cli.rs
expression: sanitized
---
stdout:
# Changelog

## Unreleased (<DATE>)

### Fixes

* lib main (<OID>)
---
stderr:
